<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Trainer</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Main activity items -->
    <string name="title_activity_settings">Settings</string>
    <string name="cardio_sensor">Cardio Sensor</string>
    <string name="speed_sensor">Speed Sensor</string>
    <string name="cadence_sensor">Cadence Sensor</string>
    <string name="wheel_size">Wheel Size</string>
    <string name="device_missing">Device missing</string>
    <string name="device_set">Device set</string>
    <string name="set">Set</string>
    <string name="go">GO!</string>
    <string name="ok">Ok</string>
    
    <!-- Discovery activity items -->
    <string name="title_activity_discovery">Sensor Discovery</string>
    <string name="title_set_cardio">Set Cardio Sensor</string>
    <string name="title_set_speed">Set Wheel Sensor</string>
    <string name="title_set_crank">Set Crank Sensor</string>
    <string name="hello_world">Hello world!</string>

    <!-- Cockpit activity items -->
    <string name="title_activity_cockpit">Workout Cockpit</string>
    <string name="cardio">Cardio</string>
    <string name="speed">Speed</string>
    <string name="cadence">Cadence</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="end">End</string>
    <string name="kmh">kmh</string>
    <string name="rpm">rpm</string>
    <string name="bpm">bpm</string>

    <!-- Session activity items -->
    <string name="title_activity_session">Workout Stats</string>
    <string name="started">Started</string>
    <string name="ended">Ended</string>
    <string name="duration">Duration</string>
    <string name="cardio_bpm">Cardio (bpm)</string>
    <string name="speed_kmh">Speed (kmh)</string>
    <string name="cadence_rpm">Cadence (rpm)</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="avg">avg</string>
    <string name="gear">Avg. Gear Ratio</string>
    <string name="fitness">Avg. Cardio Efficiency</string>
    <string name="delete">Delete</string>
    
    <!-- LineChart activity items -->
    <string name="title_activity_line_chart">Workout Chart</string>

    <!-- Diary activity items -->
    <string name="title_activity_diary">Diary</string>

    <!-- Generic gialog items -->
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    <!-- Wheel size dialog items -->
    <string name="title_wheel_dialog">Set wheel size in millimeters</string>
    <string name="scan">Scan</string>

    <!-- Delete session dialog items -->
    <string name="title_delete_dialog">Delete Workout</string>
    <string name="msg_delete_dialog">This workout will be permanently removed from your diary. Are you sure?</string>

    <!-- Other messages -->
    <string name="error_ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported</string>
    <string name="msg_sensor_uninitialized">Cannot start a new session, as there are no sensors to read from: run a Refresh before trying again.</string>
    <string name="msg_no_log">There is no log data to display.</string>
    
</resources>
